--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#546E7A</color>
     <color name="colorEditText">#D1EDFF</color>
     <color name="colorChatBubbleMe">#85E7FF</color>
+    <color name="colorChatBubbleYou">#A8C1FF</color>
 </resources>
