--- a/app/src/main/res/layout/chat_bubble_me_recyclerview.xml
+++ b/app/src/main/res/layout/chat_bubble_me_recyclerview.xml
@@ -57,7 +57,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:autoLink="all"
         />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
