--- a/app/src/main/res/layout/chat_bubble_you_recyclerview.xml
+++ b/app/src/main/res/layout/chat_bubble_you_recyclerview.xml
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/colorChatBubbleMe"
+        android:background="@color/colorChatBubbleYou"
         app:layout_constraintHorizontal_bias="0.0"
         android:maxWidth="200dp"
         android:padding="8dp"
@@ -56,7 +56,8 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/chat_bubble_re_profile_imageView"
-        app:layout_constraintTop_toBottomOf="@+id/chat_bubble_re_name_textView" />
+        app:layout_constraintTop_toBottomOf="@+id/chat_bubble_re_name_textView"
+        android:autoLink="all"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
