--- a/app/src/main/res/layout/activity_chatboard.xml
+++ b/app/src/main/res/layout/activity_chatboard.xml
@@ -7,6 +7,20 @@
     android:layout_height="match_parent"
     tools:context=".IdeamainActivity">
 
+
+
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/chatdrawer">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
     <Button
         android:id="@+id/chatboard_sendButton"
         android:layout_width="wrap_content"
@@ -39,12 +53,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         >
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chatboard_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:focusable="true"
-        />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/chatboard_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:focusable="true"
+            />
     </LinearLayout>
     <ImageView
         android:id="@+id/chatboard_clib_button"
@@ -63,16 +77,7 @@
         app:layout_constraintStart_toEndOf="@+id/chatboard_clib_button"
         app:layout_constraintTop_toTopOf="@+id/chatboard_editText"
         app:srcCompat="@drawable/ic_image_black_24dp" />
-
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/chatdrawer">
-
+</androidx.constraintlayout.widget.ConstraintLayout>
 
         <ListView
             android:id="@+id/drawer_chat"
