--- a/app/src/main/res/layout/chat_recyclerview.xml
+++ b/app/src/main/res/layout/chat_recyclerview.xml
@@ -17,7 +17,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_person_black" />
+        app:srcCompat="@drawable/ic_person_black"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/chat_re_name_textView"
