채팅 이미지 추가

--- a/app/src/main/res/layout/chat_bubble_me_recyclerview.xml
+++ b/app/src/main/res/layout/chat_bubble_me_recyclerview.xml
@@ -59,6 +59,19 @@
         app:layout_constraintTop_toTopOf="parent"
         android:autoLink="all"
         />
+    <ImageView
+        android:id="@+id/chat_bubble_re_imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="100dp"
+        android:minHeight="100dp"
+        android:maxWidth="200dp"
+        android:maxHeight="300dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        />
 
 
 
