--- a/app/src/main/res/layout/chat_bubble_me_image_recyclerview.xml
+++ b/app/src/main/res/layout/chat_bubble_me_image_recyclerview.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:id="@+id/chat_bubble_re_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="left">
+    android:layout_margin="8dp">
     <ImageView
         android:id="@+id/chat_bubble_re_profile_imageView"
         android:layout_width="50dp"
@@ -12,9 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/ic_chat_black"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"/>
+        android:visibility="gone"/>
     <TextView
         android:id="@+id/chat_bubble_re_date_textView"
         android:layout_width="wrap_content"
@@ -22,15 +20,9 @@
         app:layout_constraintStart_toEndOf="@+id/chat_bubble_re_message_textView"
         app:layout_constraintBottom_toBottomOf="@id/chat_bubble_re_message_textView"
         android:text="2015.01.01"
-        android:layout_marginStart="8dp"/>
-    <TextView
-        android:id="@+id/chat_bubble_re_me_date_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/chat_bubble_re_message_textView"
-        app:layout_constraintBottom_toBottomOf="@id/chat_bubble_re_message_textView"
-        android:text="2015.01.01"
-        android:layout_marginStart="8dp"/>
+        android:layout_marginStart="8dp"
+        android:visibility="gone"/>
+
     <TextView
         android:id="@+id/chat_bubble_re_name_textView"
         android:layout_width="wrap_content"
@@ -39,15 +31,24 @@
         android:text="이름"
         app:layout_constraintStart_toEndOf="@+id/chat_bubble_re_profile_imageView"
         app:layout_constraintTop_toTopOf="@+id/chat_bubble_re_profile_imageView"
-        android:layout_marginStart="8dp"/>
+        android:layout_marginStart="8dp"
+        android:visibility="gone"/>
+    <TextView
+        android:id="@+id/chat_bubble_re_me_date_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/chat_bubble_re_imageView"
+        app:layout_constraintBottom_toBottomOf="@id/chat_bubble_re_imageView"
+        android:text="2015.01.01"
+        android:layout_marginEnd="8dp"/>
+
 
     <TextView
         android:id="@+id/chat_bubble_re_message_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/colorChatBubbleYou"
+        android:layout_margin = "8dp"
+        android:background="@color/colorChatBubbleMe"
         app:layout_constraintHorizontal_bias="0.0"
         android:maxWidth="200dp"
         android:padding="8dp"
@@ -55,21 +56,24 @@
         android:text="안녕하세요"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/chat_bubble_re_profile_imageView"
-        app:layout_constraintTop_toBottomOf="@+id/chat_bubble_re_name_textView"
-        android:autoLink="all"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:autoLink="all"
+        android:visibility="gone"
+        />
     <ImageView
         android:id="@+id/chat_bubble_re_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="100dp"
-        android:minHeight="100dp"
+        android:minWidth="200dp"
+        android:minHeight="300dp"
         android:maxWidth="200dp"
         android:maxHeight="300dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"
         />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
