--- a/app/src/main/res/layout/ideamain.xml
+++ b/app/src/main/res/layout/ideamain.xml
@@ -33,6 +33,7 @@
 
 
         <LinearLayout
+            android:id="@+id/linearlayout1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
