--- a/app/src/main/res/layout/activity_chatalbum.xml
+++ b/app/src/main/res/layout/activity_chatalbum.xml
@@ -2,28 +2,39 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <LinearLayout
+        android:id="@+id/albumLinear"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/albumLinear"
+        <TextView
+            android:id="@+id/albumtext"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingTop="20dp"
+            android:text="사진이 없습니다."
+            android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/albumtext"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:paddingTop="20dp"
-                android:text="사진이 없습니다."
-                android:textSize="24sp" />
-        </LinearLayout>
-    </ScrollView>
+        <GridView
+            android:id="@+id/albumGrid"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:horizontalSpacing="10dp"
+            android:numColumns="3"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="10dp"
+            android:verticalSpacing="10dp">
+
+        </GridView>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
