--- a/app/src/main/res/layout/chat_recyclerview.xml
+++ b/app/src/main/res/layout/chat_recyclerview.xml
@@ -4,21 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:background="?attr/selectableItemBackground">
+    android:background="@drawable/posts_recyclerview_layout">
 
     <ImageView
         android:id="@+id/chat_re_profile_imageView"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_person_black"
-        android:scaleType="centerCrop"/>
+        app:srcCompat="@drawable/ic_person_black" />
 
     <TextView
         android:id="@+id/chat_re_name_textView"
@@ -26,6 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="이름"
+        android:textColor="#000000"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/chat_re_profile_imageView"
         app:layout_constraintTop_toTopOf="@+id/chat_re_profile_imageView" />
 
@@ -34,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="메시지"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/chat_re_profile_imageView"
         app:layout_constraintStart_toStartOf="@+id/chat_re_name_textView" />
 
