--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".ProfileFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,6 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="이름"
+            android:textColor="#000000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,10 +39,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/profile_name_textView"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="상태메시지"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="상태메시지" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/profile_name_textView" />
 
         <TextView
             android:id="@+id/profile_office_textView"
@@ -49,6 +51,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:text="학교이름"
+            android:textColor="#000000"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline2" />
@@ -58,22 +61,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:background="?attr/selectableItemBackground"
             android:text="올린 아이디어"
+            android:textColor="#000000"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="@+id/profile_office_textView"
-            app:layout_constraintTop_toBottomOf="@+id/profile_office_textView"
-            android:background="?attr/selectableItemBackground"/>
+            app:layout_constraintTop_toBottomOf="@+id/profile_office_textView" />
 
         <TextView
             android:id="@+id/profile_want_idea_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:background="?attr/selectableItemBackground"
             android:text="관심있는 아이디어"
+            android:textColor="#000000"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="@+id/profile_office_textView"
-            app:layout_constraintTop_toBottomOf="@+id/profile_post_textView"
-            android:background="?attr/selectableItemBackground"/>
+            app:layout_constraintTop_toBottomOf="@+id/profile_post_textView" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
@@ -100,10 +105,10 @@
             android:layout_marginBottom="8dp"
             android:clickable="true"
             android:src="@drawable/ic_chat_black"
+            android:visibility="gone"
             app:backgroundTint="#0BD6BE"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="gone"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
