--- a/app/src/main/res/drawable/chatl2.xml
+++ b/app/src/main/res/drawable/chatl2.xml
@@ -9,8 +9,8 @@
 
         <shape android:shape="rectangle">
             <stroke android:width="2dp"
-                android:color="#938A8A"/>
-            <solid android:color="#938A8A"/>
+                android:color="#FFFFFF"/>
+            <solid android:color="#FFFFFF"/>
 
         </shape>
 
