--- a/app/src/main/res/drawable/ideafrag_recyclerview.xml
+++ b/app/src/main/res/drawable/ideafrag_recyclerview.xml
@@ -2,15 +2,15 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:start="2dp"
-        android:end="2dp"
-        android:top="2dp"
-        android:bottom="2dp">
+        android:start="-2dp"
+        android:end="-2dp"
+        android:top="-2dp"
+        android:bottom="1dp">
 
         <shape android:shape="rectangle">
             <stroke android:width="2dp"
-                android:color="#FFFFFF"/>
-            <solid android:color="#FFFFFF"/>
+                android:color="#C5C1C1"/>
+            <solid android:color="#ffffff"/>
 
         </shape>
 
