--- a/app/src/main/res/layout/idea_recyclerview.xml
+++ b/app/src/main/res/layout/idea_recyclerview.xml
@@ -10,13 +10,28 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/ideafrag_recyclerview">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_profile"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/idea_profile" />
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_stars_black" />
+
+        <LinearLayout
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            >
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="250dp"
@@ -25,21 +40,22 @@
 
             <LinearLayout
                 android:layout_width="238dp"
-                android:layout_height="40dp">
+                android:layout_height="54dp">
 
                 <TextView
                     android:id="@+id/tv_story"
-                    android:layout_width="130dp"
+                    android:layout_width="156dp"
                     android:layout_height="match_parent"
                     android:text="안드로이드"
-                    android:textSize="13sp" />
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/tv_day"
-                    android:layout_width="106dp"
+                    android:layout_width="76dp"
                     android:layout_height="match_parent"
+                    android:padding="5dp"
                     android:text="2011.1.1"
-                    android:textSize="16sp" />
+                    android:textSize="13sp" />
 
             </LinearLayout>
 
@@ -50,29 +66,29 @@
 
                 <ImageView
                     android:id="@+id/iv_recommand"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/heart" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_star_gold_24dp" />
 
                 <TextView
                     android:id="@+id/tv_recomand"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:text="2"
-                    android:textSize="13sp" />
+                    android:textSize="15sp" />
 
                 <ImageView
                     android:id="@+id/iv_write"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/comment" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_insert_comment_black_24dp" />
 
 
                 <TextView
                     android:id="@+id/tv_write"
-                    android:layout_width="50dp"
+                    android:layout_width="58dp"
                     android:layout_height="match_parent"
-                    android:textSize="13sp" />
+                    android:textSize="15sp" />
 
 
             </LinearLayout>
