짜잘이 레이아웃

--- a/app/src/main/res/layout/activity_clever_idea_board.xml
+++ b/app/src/main/res/layout/activity_clever_idea_board.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <RadioGroup
         android:id="@+id/rdgroup"
@@ -22,6 +22,7 @@
             android:id="@+id/rb1_newidea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
             android:checked="true"
             android:text="최신순" />
 
@@ -55,15 +56,16 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        app:backgroundTint="#0BD6BE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add_black"
-        app:backgroundTint="#0BD6BE"/>
+        app:srcCompat="@drawable/ic_add_black" />
 
     <SearchView
         android:id="@+id/cleveridea_searchView"
         android:layout_width="0dp"
         android:layout_height="32dp"
+        android:background="@drawable/posts_recyclerview_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
