--- a/app/src/main/res/layout/chat_recyclerview.xml
+++ b/app/src/main/res/layout/chat_recyclerview.xml
@@ -8,16 +8,17 @@
 
     <ImageView
         android:id="@+id/chat_re_profile_imageView"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
+        android:backgroundTint="#ffffff"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_person_black" />
+        app:srcCompat="@drawable/ic_person_black_24dp" />
 
     <TextView
         android:id="@+id/chat_re_name_textView"
