--- a/app/src/main/res/layout/home_newidea_recyclerview.xml
+++ b/app/src/main/res/layout/home_newidea_recyclerview.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/posts_recyclerview_layout"
     android:foreground="?attr/selectableItemBackground">
 
     <TextView
@@ -23,6 +22,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:maxLength="20"
         android:text="제목"
         android:textColor="#000000"
         android:textSize="16sp"
