--- a/app/src/main/res/layout/idea_recyclerview.xml
+++ b/app/src/main/res/layout/idea_recyclerview.xml
@@ -14,9 +14,22 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_profile"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/idea_profile" />
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:backgroundTint="#FFFFFF"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="15dp"
+            android:layout_height="match_parent">
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="250dp"
@@ -24,54 +37,66 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="238dp"
-                android:layout_height="40dp">
+                android:layout_width="match_parent"
+                android:layout_height="54dp">
 
                 <TextView
                     android:id="@+id/tv_story"
-                    android:layout_width="130dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center|left"
+                    android:maxLength="20"
                     android:text="안드로이드"
-                    android:textSize="13sp" />
-
-                <TextView
-                    android:id="@+id/tv_day"
-                    android:layout_width="106dp"
-                    android:layout_height="match_parent"
-                    android:text="2011.1.1"
-                    android:textSize="16sp" />
+                    android:textColor="#000000"
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="238dp"
-                android:layout_height="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="5dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/iv_recommand"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/heart" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:src="@drawable/ic_star_gold_24dp" />
 
                 <TextView
                     android:id="@+id/tv_recomand"
-                    android:layout_width="50dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="2"
-                    android:textSize="13sp" />
+                    android:layout_marginLeft="2dp"
+                    android:gravity="bottom|center"
+                    android:textSize="15sp" />
 
                 <ImageView
                     android:id="@+id/iv_write"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/comment" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginLeft="15dp"
+                    android:src="@drawable/ic_insert_comment_black_24dp" />
 
 
                 <TextView
                     android:id="@+id/tv_write"
-                    android:layout_width="50dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="2dp"
+                    android:gravity="bottom|center"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/tv_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom|right"
+                    android:padding="5dp"
+                    android:text="2011.1.1"
                     android:textSize="13sp" />
 
 
@@ -85,14 +110,18 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/idpost"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/idpost"/>
+                android:layout_margin="6dp"
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/ic_camera_alt_black_24dp" />
 
 
         </LinearLayout>
 
 
-
     </LinearLayout>
+
+
 </LinearLayout>
