--- a/app/src/main/res/layout/idea_recyclerview.xml
+++ b/app/src/main/res/layout/idea_recyclerview.xml
@@ -78,9 +78,9 @@
 
                 <ImageView
                     android:id="@+id/iv_write"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_insert_comment_black_24dp" />
+                    android:layout_width="25dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/commenticon" />
 
 
                 <TextView
