새로운 아이디어 댓글 아이콘 교체

--- a/app/src/main/res/layout/idea_recyclerview.xml
+++ b/app/src/main/res/layout/idea_recyclerview.xml
@@ -79,11 +79,11 @@
 
                 <ImageView
                     android:id="@+id/iv_write"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_gravity="bottom"
                     android:layout_marginLeft="15dp"
-                    android:src="@drawable/ic_insert_comment_black_24dp" />
+                    android:src="@drawable/commenticon" />
 
 
                 <TextView
