--- a/app/src/main/res/layout/chatlist_item.xml
+++ b/app/src/main/res/layout/chatlist_item.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_notifications_black_24dp"
-        android:button="@android:color/transparent"
+        android:button="@drawable/chating_alram_check"
         android:visibility="gone" />
 
     <LinearLayout
