--- a/app/src/main/res/layout/ranking_recyclerview.xml
+++ b/app/src/main/res/layout/ranking_recyclerview.xml
@@ -16,10 +16,10 @@
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:scaleType="centerCrop"
+        android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_stars_black" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/rank_re_name_textView"
