채팅 레이아웃 수정

--- a/app/src/main/res/layout/chat_bubble_you_file_recyclerview.xml
+++ b/app/src/main/res/layout/chat_bubble_you_file_recyclerview.xml
@@ -14,7 +14,9 @@
         android:src="@drawable/ic_chat_black"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
+        />
     <TextView
         android:id="@+id/chat_bubble_re_date_textView"
         android:layout_width="wrap_content"
