프로파일 이미지 수정

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -72,6 +72,7 @@
             android:layout_marginTop="40dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_launcher_background"
+            android:backgroundTint="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
